# cgt

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
cgt_perez-sechi/compute/: __init__.py  castro_multiproc.py  grabisch.py  shapley.py  shapley_multiproc.py
cgt_perez-sechi/modeling/: __init__.py  cluster.py
cgt_perez-sechi/visualization/: plotting.py
cgt_perez-sechi_tests/compute/: test_grabisch.py
cgt_perezsechi/compute/: castro.py  castro_multiproc.py  grabisch.py  shapley.py  shapley_multiproc.py
cgt_perezsechi/manipulation/: __init__.py  norm.py
cgt_perezsechi/modeling/: cluster.py  inequality.py
cgt_perezsechi/util/: __init__.py
cgt_perezsechi/visualization/: graph.py  plot.py  plotting.py
cgt_perezsechi_tests/compute/: test_grabisch.py
cgt_perezsechi_tests/modeling/: test_communities.py  test_normalize.py
cgt_seccijr/: __init__.py  castro_multiproc.py  grabisch.py  sh_i.py  shapley.py  shapley_multiproc.py  util.py
cgt_seccijr/compute/: castro_multiproc.py  grabisch.py  shapley.py  shapley_multiproc.py
cgt_seccijr/exploration/: importance.py  sampling.py  schema.py
cgt_seccijr/manipulation/: __init__.py  coding.py
cgt_seccijr/visualization/: graph.py  plot.py  plotting.py
cgt_seccijr_tests/: test_grabisch.py
cgt_seccijr_tests/compute/: test_grabisch.py
cgt_seccijr_tests/modeling/: test_cluster.py
cgt_seccijr_tests/modeling/util/: benchmark.py
solutions/: castro.py  castro_multiproc.py  nucleolus.py  shapley.py  shapley_multiproc.py
src/: setup.py
src/cgt_seccijr/: sh_i.py  shapley_multiproc.py
