[build-system]
requires = ["setuptools>=61.0", "scipy", "multiprocess"]
build-backend = "setuptools.build_meta"

[project]
name = "cgt_seccijr"
version = "0.0.1"
authors = [
  { name="Carlos I. Pérez-Sechi", email="secci.jr@gmail.com" },
]
description = "Cooperative Game Theory solutions package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/seccijr/cgt"
"Bug Tracker" = "https://github.com/seccijr/cgt/issues"